--- a/class-seat-notifier-core/src/main/resources/application.properties
+++ b/class-seat-notifier-core/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=19190
+server.port=18000
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/class_seat?characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=jakeyoo
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://all-kill-db.cfd6bqd4blo0.ap-northeast-2.rds.amazonaws.com:3306/allkill_database?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=guest
+spring.datasource.password=Hello1234
 
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
