Implement Telegram bot noti

--- a/class-seat-notifier-core/pom.xml
+++ b/class-seat-notifier-core/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots-spring-boot-starter</artifactId>
+            <version>4.1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
